--- a/Makefile.compile
+++ b/Makefile.compile
@@ -18,7 +18,7 @@ client: phony-client clean-client $(CLIENT_OBJS)
 	$(CC) $(CLIENT_DIR)$(MAIN_DIR)client.c -m32 -Wall -pthread -o cliente $(CLIENT_MOUNTED_OBJS)
     
 server: phony-server clean-server $(SERVER_OBJS)
-	$(CC) $(SERVER_DIR)$(MAIN_DIR)server.c -m32 -Wall -pthread -o servidor $(SERVER_MOUNTED_OBJS)
+	$(CC) $(SERVER_DIR)$(MAIN_DIR)*.c -m32 -Wall -pthread -o servidor $(SERVER_MOUNTED_OBJS)
 
 dropboxClient.o: $(CLIENT_DIR)$(SRC_DIR)dropboxClient.c
 	$(CC) $(CFLAGS) $(CLIENT_DIR)$(SRC_DIR)dropboxClient.c -Wall -o $(CLIENT_DIR)$(BIN_DIR)dropboxClient.o
@@ -29,11 +29,11 @@ dropboxServer.o: $(SERVER_DIR)$(SRC_DIR)dropboxServer.c
 dropboxUtils.o: phony-utils $(UTILS_SRC)dropboxUtils.c
 	$(CC) $(CFLAGS) $(UTILS_SRC)dropboxUtils.c -Wall -o $(UTILS_BIN)dropboxUtils.o
 
-clean-client:
-	find $(CLIENT_DIR)$(BIN_DIR) -type f ! -name '*.c' ! -name 'Makefile' -delete
+clean-files:
+	rm -rf rm -rf ./files/out/*
 
-clean-server:
-	find $(SERVER_DIR)$(BIN_DIR) -type f ! -name '*.c' ! -name 'Makefile' -delete
+clean-client: clean-files
+	find $(CLIENT_DIR)$(BIN_DIR) -type f ! -name '*.c' ! -name 'Makefile' -delete
 
 phony-client:
 	mkdir -p $(CLIENT_DIR)$(BIN_DIR)
@@ -43,3 +43,7 @@ phony-server:
 
 phony-utils:
 	mkdir -p $(UTILS_BIN)
+	
+clean-server: clean-files
+	find $(SERVER_DIR)$(BIN_DIR) -type f ! -name '*.c' ! -name 'Makefile' -delete
+
