--- a/Makefile.compile
+++ b/Makefile.compile
@@ -14,26 +14,30 @@ CLIENT_MOUNTED_OBJS=$(UTILS_BIN)dropboxUtils.o $(UTILS_BIN)support.o $(CLIENT_DI
 SERVER_MOUNTED_OBJS=$(UTILS_BIN)dropboxUtils.o $(UTILS_BIN)support.o $(SERVER_DIR)$(BIN_DIR)dropboxServer.o
 
 
-testeCompile: 
-	make clientTeste 
+testeCompile:
+	make clientTeste
 	make serverTeste
 
-clientTeste: clean-client 
+clientTeste: clean-client
 	$(CC) $(CLIENT_DIR)$(MAIN_DIR)testeCliente.c $(UTILS_SRC)file.c  -Wall  -o cliente
 
-serverTeste: clean-server 
+serverTeste: clean-server
 	$(CC) $(SERVER_DIR)$(MAIN_DIR)testeServer.c $(UTILS_SRC)file.c  -Wall  -o servidor
+
+directoryTeste: clean-server
+	$(CC) $(SERVER_DIR)$(MAIN_DIR)directoryTest.c $(UTILS_SRC)directory.c  -Wall  -o directory
+
 
 
 client: phony-client clean-client $(CLIENT_OBJS)
 	$(CC) $(CLIENT_DIR)$(MAIN_DIR)*.c -m32 -Wall -pthread -o cliente $(CLIENT_MOUNTED_OBJS)
-    
+
 server: phony-server clean-server $(SERVER_OBJS)
 	$(CC) $(SERVER_DIR)$(MAIN_DIR)*.c -m32 -Wall -pthread -o servidor $(SERVER_MOUNTED_OBJS)
 
 dropboxClient.o: $(CLIENT_DIR)$(SRC_DIR)dropboxClient.c
 	$(CC) $(CFLAGS) $(CLIENT_DIR)$(SRC_DIR)dropboxClient.c -Wall -o $(CLIENT_DIR)$(BIN_DIR)dropboxClient.o
-	
+
 dropboxServer.o: $(SERVER_DIR)$(SRC_DIR)dropboxServer.c
 	$(CC) $(CFLAGS) $(SERVER_DIR)$(SRC_DIR)dropboxServer.c -Wall -o $(SERVER_DIR)$(BIN_DIR)dropboxServer.o
 
@@ -54,7 +58,6 @@ phony-server:
 
 phony-utils:
 	mkdir -p $(UTILS_BIN)
-	
+
 clean-server: clean-files
 	find $(SERVER_DIR)$(BIN_DIR) -type f ! -name '*.c' ! -name 'Makefile' -delete
-
