--- a/Makefile.compile
+++ b/Makefile.compile
@@ -5,7 +5,7 @@ SRC_DIR=src/
 MAIN_DIR=main/
 CLIENT_DIR=./client/
 SERVER_DIR=./server/
-CLIENTS_FOLDERS=./clientDirectories/
+CLIENTS_FOLDERS=./clientsDirectories/
 UTILS_SRC=./utils/src/
 UTILS_BIN=./utils/bin/
 CFLAGS=-m32 -c -pthread
