--- a/Makefile.compile
+++ b/Makefile.compile
@@ -16,19 +16,19 @@ SERVER_MOUNTED_OBJS=$(UTILS_BIN)dropboxUtils.o $(UTILS_BIN)support.o $(SERVER_DI
 
 
 client: phony-client clean-client $(CLIENT_OBJS)
-	$(CC) $(CLIENT_DIR)$(MAIN_DIR)client.c -m32 -Wall -pthread -o cliente $(CLIENT_MOUNTED_OBJS)
+	$(CC) $(CLIENT_DIR)$(MAIN_DIR)client.c -m32 -pthread -o cliente $(CLIENT_MOUNTED_OBJS)
     
 server: phony-server clean-server $(SERVER_OBJS)
-	$(CC) $(SERVER_DIR)$(MAIN_DIR)server.c -m32 -Wall -pthread -o servidor $(SERVER_MOUNTED_OBJS)
+	$(CC) $(SERVER_DIR)$(MAIN_DIR)server.c -m32 -pthread -o servidor $(SERVER_MOUNTED_OBJS)
 
 dropboxClient.o: $(CLIENT_DIR)$(SRC_DIR)dropboxClient.c
-	$(CC) $(CFLAGS) $(CLIENT_DIR)$(SRC_DIR)dropboxClient.c -Wall -o $(CLIENT_DIR)$(BIN_DIR)dropboxClient.o
+	$(CC) $(CFLAGS) $(CLIENT_DIR)$(SRC_DIR)dropboxClient.c -o $(CLIENT_DIR)$(BIN_DIR)dropboxClient.o
 	
 dropboxServer.o: $(SERVER_DIR)$(SRC_DIR)dropboxServer.c
-	$(CC) $(CFLAGS) $(SERVER_DIR)$(SRC_DIR)dropboxServer.c -Wall -o $(SERVER_DIR)$(BIN_DIR)dropboxServer.o
+	$(CC) $(CFLAGS) $(SERVER_DIR)$(SRC_DIR)dropboxServer.c -o $(SERVER_DIR)$(BIN_DIR)dropboxServer.o
 
 dropboxUtils.o: phony-utils $(UTILS_SRC)dropboxUtils.c
-	$(CC) $(CFLAGS) $(UTILS_SRC)dropboxUtils.c -Wall -o $(UTILS_BIN)dropboxUtils.o
+	$(CC) $(CFLAGS) $(UTILS_SRC)dropboxUtils.c -o $(UTILS_BIN)dropboxUtils.o
 
 clean-client:
 	find $(CLIENT_DIR)$(BIN_DIR) -type f ! -name '*.c' ! -name 'Makefile' -delete
